Removed setLastAction method from IController interface and classes which implement it Removed unused imports Removed backlocation property from LocationParser Removed FlightView class Removed RouteView class Removed IView interface